<resources>
    <string name="app_name">ScoutBook</string>
    <string name="select_position">Select Position</string>
    <string name="full_name">FULL NAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="hesapOlustur">Hesap oluşturmak için tıklayınız</string>
</resources>